# object_tracking

./: CMakeLists.txt  README.md
src/: featurePipeline.cpp  main.py  tracker.py
